--- a/front-end/myaccount/product.html
+++ b/front-end/myaccount/product.html
@@ -128,6 +128,16 @@
                                     <label for="special_notes">Special Notes:</label>
                                     <textarea v-model="product_det.special_notes" id="special_notes" :disabled="!isEditable1"></textarea>
                                 </div>
+                                <div class="form-group" v-for="pcc in product_det.product_custom_columns">
+                                    <label>{{pcc.column_name}}</label>
+                                    <input type="number" v-if="pcc.column_type == 'integer'" v-model="pcc.int_value" :disabled="!isEditable1">
+                                    <input type="number" v-if="pcc.column_type == 'float'" v-model="pcc.float_value" :disabled="!isEditable1"> 
+                                    <input type="date" v-if="pcc.column_type == 'date'" v-model="pcc.date_value" :disabled="!isEditable1"> 
+                                    <input type="datetime-local" v-if="pcc.column_type == 'datetime'" v-model="pcc.datetime_value" :disabled="!isEditable1">
+                                    <input type="number" v-if="pcc.column_type == 'varchar'" v-model="pcc.varchar_value" :disabled="!isEditable1">
+                                    <input type="text" v-if="pcc.column_type == 'char'" v-model="pcc.char_value" :disabled="!isEditable1" maxlength="1">
+                                    <textarea v-if="pcc.column_type == 'text'" v-model="pcc.text_value" :disabled="!isEditable1"></textarea>
+                                </div>
                             </div>
                         </div> <br>
 
@@ -288,7 +298,8 @@
                             "product_end_date": this.product_data.product_end_date, 
                             "yield_": this.product_data.yield_, 
                             "expected_revenue": this.product_data.expected_revenue, 
-                            "special_notes": this.product_data.special_notes
+                            "special_notes": this.product_data.special_notes, 
+                            "product_custom_columns": this.product_data.product_custom_columns
                         };
                         this.product_det = {
                             "amount": this.product_data.amount, 
@@ -297,7 +308,8 @@
                             "product_end_date": this.product_data.product_end_date, 
                             "yield_": this.product_data.yield_, 
                             "expected_revenue": this.product_data.expected_revenue, 
-                            "special_notes": this.product_data.special_notes
+                            "special_notes": this.product_data.special_notes, 
+                            "product_custom_columns": this.product_data.product_custom_columns
                         };
                         this.init_actuals = {
                             "actual_revenue": this.product_data.actual_revenue, 
