--- a/front-end/products/info.html
+++ b/front-end/products/info.html
@@ -40,8 +40,8 @@
         <div class="product-details">
             <h1 style="margin-top: 0px !important;">{{product_info.name}}</h1>
             <h3>{{product_info.description}}</h3>
-            <div>Term: {{product_info.term}} month(s) | {{product_info.percentage_label}}: {{(100*product_info.percentage).toFixed(2)}}%</div> <br>
-            <div>{{product_info.mon_amt_label}}: {{product_info.currency}}{{product_info.monetary_amount.toFixed(2)}}</div> 
+            <div><span v-if="product_info.term !== null">Term: {{product_info.term}} month(s) </span> | <span v-if="product_info.percentage !== null">{{product_info.percentage_label}}: {{(100*product_info.percentage).toFixed(2)}}% </span></div> <br>
+            <div><span v-if="product_info.monetary_amount !== null">{{product_info.mon_amt_label}}: {{product_info.currency}}{{product_info.monetary_amount.toFixed(2)}} </span></div> 
             <button v-if="!show_appl_form" id="show-appl-button" @click="showApplication()">Apply for {{product_info.category_name}}</button>
             
             <form v-if="show_appl_form" id="appl-form" class="form-container full-width">
