Many changes so far

--- a/front-end/employee-portal/account.html
+++ b/front-end/employee-portal/account.html
@@ -156,7 +156,7 @@
                     <h2>Products:</h2>
                 </div>
                 <div class="product-grid" v-if="Object.keys(products).length">
-                    <a class="product-card" v-for="prod in products" :href="'product.html?product_uid='+prod.product_uid">
+                    <a class="product-card" v-for="prod in products" :href="'instance.html?product_uid='+prod.product_uid">
                         <img :src="'../img/products/'+prod.picture_name+'.png'"> 
                         <div class="product-title">{{prod.name}}</div>
                         <div class="product-description">Product UID: {{prod.product_uid}} | {{prod.currency}}{{prod.amount.toFixed(2)}} | {{prod.status_name}}</div>
