--- a/front-end/employee-portal/instance.html
+++ b/front-end/employee-portal/instance.html
@@ -20,16 +20,21 @@
                     <div>
                         <h2><a style="color: #000 !important; text-decoration: none; cursor: pointer;" href="index.html"><span><img height="20px" src="../img/alex_bank.png"> </span>Employee Portal</a></h2>
                     </div>
-                    <div class="accordion">
+                    <div class="accordion" v-if="menu.length != 0">
                         <div v-for="(group, index) in menu" class="accordion-group" :data-group="group.dataGroup">
                             <div v-if="group.privileges.includes(user_role)">
-                                <div class="accordion-header" @click="toggleAccordion(index)"><span><img :src="group.icon"></span> <span class="accordion-body-title">{{group.displayName}}</span></div>
+                                <div class="accordion-header" @click="toggleAccordion(index)">
+                                    <span><img :src="group.icon"></span>
+                                    <span class="accordion-body-title">{{group.displayName}}</span>
+                                </div>
                                 <div class="accordion-body" :class="{ show: openIndex === index }">
-                                    <p v-for="child in group.children"><a :href="child.url">{{child.displayName}}</a></p>
+                                    <p v-for="child in group.children.filter(child => !child.privileges || child.privileges.includes(user_role))">
+                                        <a :href="child.url">{{child.displayName}}</a>
+                                    </p>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>    
                     <div class="sidebar-footer">
                         <p><a href="../myaccount/index.html"><span><img src="../assets/circle-user-solid.svg"></span> <span class="sidebar-footer-title">My Account</span></a></p>
                         <p><a href="../index.html"><span><img height="17px" src="../assets/arrow-left-solid.svg"></span> <span class="sidebar-footer-title">Alex Bank Home</span></a></p>
