--- a/front-end/employee-portal/manage-catalog.html
+++ b/front-end/employee-portal/manage-catalog.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <div id="app">
-        <div v-if="isLoggedIn && ['A', 'C'].includes(user_role)">
+        <div v-if="isLoggedIn && ['A', 'C', 'E'].includes(user_role)">
             <div class="sidebar">
                 <div class="sidebar-content">
                     <div>
@@ -37,13 +37,18 @@
                     <div class="accordion" v-if="menu.length != 0">
                         <div v-for="(group, index) in menu" class="accordion-group" :data-group="group.dataGroup">
                             <div v-if="group.privileges.includes(user_role)">
-                                <div class="accordion-header" @click="toggleAccordion(index)"><span><img :src="group.icon"></span> <span class="accordion-body-title">{{group.displayName}}</span></div>
+                                <div class="accordion-header" @click="toggleAccordion(index)">
+                                    <span><img :src="group.icon"></span>
+                                    <span class="accordion-body-title">{{group.displayName}}</span>
+                                </div>
                                 <div class="accordion-body" :class="{ show: openIndex === index }">
-                                    <p v-for="child in group.children"><a :href="child.url">{{child.displayName}}</a></p>
+                                    <p v-for="child in group.children.filter(child => !child.privileges || child.privileges.includes(user_role))">
+                                        <a :href="child.url">{{child.displayName}}</a>
+                                    </p>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>                                   
                     <div class="sidebar-footer">
                         <p><a href="../myaccount/index.html"><span><img src="../assets/circle-user-solid.svg"></span> <span class="sidebar-footer-title">My Account</span></a></p>
                         <p><a href="../index.html"><span><img height="17px" src="../assets/arrow-left-solid.svg"></span> <span class="sidebar-footer-title">Alex Bank Home</span></a></p>
@@ -57,7 +62,7 @@
                 <div class="card">
                     <div class="heading">
                         <h3>Drafts</h3>
-                        <select v-model="drafts_show" style="margin: 0;">
+                        <select v-model="drafts_show" style="margin: 0; width: 200px;">
                             <option value="preview">My Drafts Preview </option>
                             <option value="my">My Drafts </option>
                             <option value="all" v-if="user_role == 'A' || user_role == 'C'">All Drafts </option>
@@ -97,7 +102,7 @@
                 <div class="card">
                     <div class="heading">
                         <h3>Products</h3>
-                        <select v-model="products_show" style="margin: 0;">
+                        <select v-model="products_show" style="margin: 0; width: 200px;">
                             <option value="current">Current </option>
                             <option value="all">All Products </option>
                         </select> 
@@ -123,11 +128,10 @@
                         <div class="product-description">{{prod.description}}</div>
                     </a>
                 </div>
-
             </div>
         </div>
 
-        <div v-else-if="isLoggedIn && !['A', 'C'].includes(user_role)" class="content">
+        <div v-else-if="isLoggedIn && !['A', 'C', 'E'].includes(user_role)" class="content">
             <h2 style="color: red; text-align: center;">You do not have access to this page!</h2>
         </div>
 
