DEV-15 PATCH product/{product_id} modified to accept __null__ values as None, and the product.html page in the employee portal has been updated accordingly.

--- a/front-end/employee-portal/product.html
+++ b/front-end/employee-portal/product.html
@@ -439,7 +439,7 @@
 
                         for (const key in this.product) {
                             if (key !== 'custom_columns' && this.product[key] !== this.init_product[key]) {
-                                changes[key] = this.product[key];
+                                changes[key] = this.product[key] ? this.product[key] : "__null__";
                             }
                         }
                         console.log(this.product.terms_and_conditions);
