--- a/front-end/employee-portal/product.html
+++ b/front-end/employee-portal/product.html
@@ -565,7 +565,7 @@
                         "customer_visible_yn": 'N',
                         "customer_populatable_yn": 'N',
                         "column_type": "integer",
-                        "default_value": 'N',
+                        "default_value": null,
                         "exercise_date_yn": 'N',
                         "available_before": null
                     })
